# TFE

./: CMakeLists.txt
components/AccelStepper-esp-idf/: AccelStepper.cpp  CMakeLists.txt  accelstepper_wrapper.cpp  accelstepper_wrapper.h
components/AccelStepper-esp-idf/include/: AccelStepper.h
components/Stepperlib/: CMakeLists.txt  stepper_motor_control.c  stepper_motor_encoder.c
components/Stepperlib/include/: stepper_motor_control.h
components/ethernet/: CMakeLists.txt  ethernet_connect.c
components/model/: CMakeLists.txt  DHT22.c  model.c
components/model/include/: DHT22.h  model.h
components/open62541lib/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  opcua_esp32.c  opcua_esp32.h
